--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,6 @@
             }
             
             body {
-                width: 100%;
                 height: 100%;
                 margin: 0;
                 font-family: IBM Plex Sans, IBM Plex Sans, IBM Plex Sans;
@@ -59,7 +58,6 @@
                 background-color: #212121; 
                 color: white; 
                 text-align: center; 
-                height: 20%;
             }
             
             /* Light/Dark Mode */
@@ -200,9 +198,8 @@
             
             .dropdown {
                 float: right;
-                width: 5%; 
+                width: 10%; 
                 margin-right: 40;
-                overflow: hidden;
             }
 
             .dropdown:hover, .dropbtn:hover {
@@ -232,7 +229,8 @@
                 font-size: 20px;
                 font-weight: lighter;
                 margin: 0;
-                font-size: 13; margin-left: 1%;
+                font-size: 13; 
+                margin-left: 1%;
             }
             
             .dropdown-content {
@@ -264,15 +262,15 @@
 
             /* Dark/Light Toggle */
             #dltoggle {
-                float: right; 
+                margin-left: 1%;
                 cursor: pointer; 
                 width: 7%;
             }
 
             /* Logo */
             #logoimg {
-                width: 50px; 
-                height: 45px; 
+                width: 40px; 
+                height: 36px; 
                 float: left; 
                 margin-left: 20%; 
                 padding: 10px 10px;
@@ -280,8 +278,8 @@
 
             /* Dropdown Image */
             #dropimg {
-                width: 30px; 
-                height: 25px; 
+                width: 24px; 
+                height: 20px; 
                 margin-right: 40%; 
                 margin-top: 10px; 
                 padding: 10px 10px;
@@ -317,7 +315,7 @@
             
         /***** SECTION 1: HOME *****/
             .hometitle {
-                font-size: 120; 
+                font-size: 100; 
                 color: white; 
                 font-weight: 700; 
                 text-align: center; 
@@ -330,6 +328,7 @@
                 font-weight: 600; 
                 color: white;
                 text-align: center;
+                line-height: 1.2;
             }
             
             .downbtn {
@@ -345,7 +344,7 @@
             
         /***** SECTION 2: ABOUT *****/
             .aboutimg {
-                width: 25%; 
+                width: 300; 
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
                 
                 /*Center Image*/
@@ -360,8 +359,8 @@
                 text-align: justify; 
                 text-align-last: center; 
                 line-height: 40px;
-                margin-left: 125; 
-                margin-right: 125;
+                margin-left: 50; 
+                margin-right: 50;
                 margin-top: 50; 
             }
             
@@ -371,8 +370,8 @@
                 text-align: justify; 
                 text-align-last: center; 
                 line-height: 40px; 
-                margin-left: 125; 
-                margin-right: 125; 
+                margin-left: 50; 
+                margin-right: 50; 
                 margin-top: 50; 
             }
         /***** SECTION 2: ABOUT END*****/
@@ -382,7 +381,7 @@
         /***** SECTION 3: PROJECTS *****/
             
             /* Container 1*/
-            .container { 
+            /*.container { 
                 width: 835px; 
                 height: 650px; 
                 padding-top: 20px;
@@ -394,7 +393,6 @@
                 float: left; 
                 width: 265px; 
                 height: 600; 
-                /*background-color: #EFEFEF;*/ 
                 border: black;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             }
@@ -403,7 +401,6 @@
                 float: left; 
                 width: 265px; 
                 height: 600; 
-                /*background-color: #EFEFEF;*/ 
                 border: black;
                 box-shadow: 0px 16px 30px 10px rgba(0,0,0,0.2);
             }
@@ -412,7 +409,6 @@
                 float: left; 
                 width: 265px; 
                 height: 600; 
-                /*background-color: #EFEFEF;*/  
                 border: black; 
                 margin-left: 20px;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -422,7 +418,6 @@
                 float: left; 
                 width: 265px; 
                 height: 600; 
-                /*background-color: #EFEFEF;*/  
                 border: black; 
                 margin-left: 20px;
                 box-shadow: 0px 16px 30px 10px rgba(0,0,0,0.2);
@@ -432,7 +427,6 @@
                 float: right; 
                 width: 265px; 
                 height: 600; 
-                /*background-color: #EFEFEF;*/ 
                 border: black;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             }
@@ -441,9 +435,22 @@
                 float: right; 
                 width: 265px; 
                 height: 600; 
-                /*background-color: #EFEFEF;*/ 
                 border: black;
                 box-shadow: 0px 16px 30px 10px rgba(0,0,0,0.2);
+            }*/
+
+            .box {
+                width: 70%; 
+                border: black; 
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                margin-bottom: 5%;
+            }
+
+            .box:hover {
+                width: 70%; 
+                border: black; 
+                box-shadow: 0px 16px 30px 10px rgba(0,0,0,0.2);
+                margin-bottom: 5%;
             }
             
             .boximg {
@@ -476,7 +483,7 @@
             /* Container 2 - Overlay Container */
             .container2 {
                 position: relative;
-                width: 750;
+                width: 80%;
             }
 
             .image {
@@ -519,7 +526,7 @@
             
             .text3 {
                 color: #4d4d4d;
-                font-size: 20px;
+                font-size: smaller;
                 font-weight: 600;
                 line-height: 1.7;
                 position: absolute;
@@ -690,7 +697,7 @@
                 background-color: #f2f2f2;
                 padding: 20px;
                 position: relative;
-                left: 23%;
+                left: 22%;
                 width: 50%;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             }
@@ -747,6 +754,9 @@
             .copytext {
                 font-family: IBM Plex Sans;
                 margin-top: 10;
+                line-height: 1.5;
+                text-align: center;
+                margin-bottom: 25;
             }
             
             /* Tooltp (button hover text) */
