--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,10 +49,6 @@
             .graydiv {
                 background-color: #D2D2D2;
             }
-
-            .whitediv {
-                background-color: white;
-            }
             
             .copydiv {
                 background-color: #212121; 
@@ -63,11 +59,11 @@
             /* Light/Dark Mode */
             body.dark-mode {
                 background-color: #1C1C1C;
-                color: white;
+                color: #f0f0f0;
             }
             
             p.dark-mode {
-                color: white;
+                color: #f0f0f0;
             }
             
             /*body.dark-mode button {
@@ -77,11 +73,11 @@
 
             body.light-mode {
                 background-color: white;
-                color: black;
+                color: #323232;
             }
             
             p.light-mode {
-                color: #4d4d4d;
+                color: #323232;
             }
             
             /*body.light-mode button {
@@ -237,7 +233,8 @@
                 display: none;
                 position: fixed;
                 left: 0;
-                background-color: inherit;
+                background-color: black;
+                opacity: 0.8;
                 width: 100%;
                 text-align: center;
                 z-index: 1;
@@ -249,11 +246,11 @@
                 padding: 12px 16px;
                 text-decoration: none;
                 display: block;
-                text-align: left;
+                text-align: center;
             }
             
             .dropdown-content a:hover {
-                background-color: #ddd;
+                color: #d4d4d4;
             }
 
             .dropdown:hover .dropdown-content {
@@ -261,10 +258,32 @@
             }
 
             /* Dark/Light Toggle */
-            #dltoggle {
+            /*#dltoggle {
                 margin-left: 1%;
+                display: block;
                 cursor: pointer; 
-                width: 7%;
+            }*/
+
+            #dltoggle {
+                display: none;
+                position: fixed;
+                bottom: 20px;
+                left: 30px;
+                z-index: 3;
+                font-size: 18px;
+                border: none;
+                outline: none;
+                color: white;
+                cursor: pointer;
+                padding: 5px;
+                border-radius: 4px;
+                background-color: transparent;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            }
+
+            .dlimg {
+                width: 50px;
+                
             }
 
             /* Logo */
