--- a/stylesheet.css
+++ b/stylesheet.css
@@ -432,6 +432,93 @@
             
             
         /***** SECTION 3: PROJECTS *****/
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 2;
+            padding-top: 100px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            position: relative;
+            background-color: #fefefe;
+            margin: auto;
+            padding: 0;
+            /*border: 1px solid #888;*/
+            width: 60%;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+            -webkit-animation-name: animatetop;
+            -webkit-animation-duration: 0.4s;
+            animation-name: animatetop;
+            animation-duration: 0.4s
+        }
+
+        /* Add Animation */
+        @-webkit-keyframes animatetop {
+            from {top:-300px; opacity:0} 
+            to {top:0; opacity:1}
+        }
+
+        @keyframes animatetop {
+            from {top:-300px; opacity:0}
+            to {top:0; opacity:1}
+        }
+
+        /* The Close Button */
+        .close {
+            color: white;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .modal-header {padding: 2px 8px; background-image: linear-gradient(to right,#2998ff , #99c1ff); color: white;}
+
+        .modal-body {padding: 2px 8px; display: flex; flex-flow: row wrap; justify-content: space-around; align-items: center;}
+
+        .modalbtn {
+            letter-spacing: 1px;
+            background-color: #000b1f; 
+            color: white; 
+            padding: 10px 20px;
+            font-family: Rubik; 
+            font-size: 17px; 
+            font-weight: 400;
+            
+            border: 2px solid white;
+            border-radius: 5px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            cursor: pointer; 
+            
+            /* Center button */
+            margin: auto;
+            display: block;
+        }
+
+        .modalbtn:hover {
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.6);
+        }
+
+        /*.modal-footer {
+            padding: 2px 16px;
+            background-color: #5cb85c;
+            color: white;
+        }*/
             .projcontainer { 
                 display: flex;
                 flex-flow: row wrap; /* Flex direction: Determines direction flex items are placed in the flex container; Flex wrap: Allows items to fit on multiple lines. */
@@ -515,9 +602,10 @@
             .expbtn {
                 background-color: #020238; 
                 color: white; 
-                padding: 15px 15px;
+                width: 50%;
+                padding: 10px 10px;
                 font-family: 'Rubik', sans-serif; 
-                font-size: 15; 
+                font-size: 1.5vw; 
                 font-weight: 200;
                 border: none;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -533,9 +621,10 @@
             .expbtn:hover {
                 background-color: #000017; 
                 color: white; 
-                padding: 15px 15px;
+                width: 50%;
+                padding: 10px 10px;
                 font-family: 'Rubik', sans-serif; 
-                font-size: 15;
+                font-size: 1.5vw;
                 font-weight: 200;
                 border: none;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -550,10 +639,10 @@
 
             .text2 {
                 color: #272727;
-                font-size: 30px;
+                font-size: 3.3vw;
                 font-weight: 700;
                 position: absolute;
-                top: 10%;
+                top: 15%;
                 left: 50%;
                 -webkit-transform: translate(-50%, -50%);
                 -ms-transform: translate(-50%, -50%);
@@ -563,7 +652,7 @@
             
             .text3 {
                 color: #4d4d4d;
-                font-size: smaller;
+                font-size: 1.2vw;
                 font-weight: 600;
                 line-height: 1.7;
                 position: absolute;
